# libtorch_tutorial

./: .gitignore  Dockerfile  README.md  buildmodel.py  docker-run.sh
example/: CMakeLists.txt
example/src/: main.cpp
pymodel/: imagenet_labels.py  model.py
